--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,14 @@
   body {
     @apply bg-[#F5F5F5] text-[#505050] min-h-screen p-5;
   }
+
+  button {
+    @apply rounded-xl px-2 py-2 border border-[#505050] font-bold;
+  }
+
+  select {
+    @apply rounded-xl px-5 py-2 border border-[#505050] font-bold;
+  }
 }
 
 @layer components {
@@ -16,11 +24,15 @@
     @apply text-3xl font-bold;
   }
 
-  button {
-    @apply rounded-xl px-2 py-2 border border-[#505050] font-bold;
-  }
-
   .toggle-button-list {
     @apply grid grid-cols-4 gap-1 sm:grid-cols-6 lg:grid-cols-8;
+  }
+
+  .chart {
+    @apply text-right;
+  }
+
+  .select-filter-option {
+    @apply mb-1;
   }
 }
